<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_actionbar_height"
        android:background="@drawable/theme_bg" >

        <ImageView
            android:id="@+id/actionbar_back"
            android:layout_width="@dimen/default_actionbar_height"
            android:layout_height="@dimen/default_actionbar_height"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/theme_back" />

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_actionbar_height"
            android:gravity="center"
            android:text="@string/device_name"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </LinearLayout>
     <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/color_set"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seekbar_self_red"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:max="100"
            android:progress="80"
            android:progressDrawable="@drawable/self_define_red"
            android:thumb="@drawable/thumb_bar_red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/HueTv_Min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/chromaticity_low"
                android:textColor="@color/text_color"
                android:textSize="@dimen/color_font_size" />

            <TextView
                android:id="@+id/HueTv_Max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/chromaticity_hight"
                android:textColor="@color/text_color"
                android:textSize="@dimen/color_font_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seekbar_self_green"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/self_define_green"
            android:thumb="@drawable/thumb_bar_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/chromaticity_low"
                android:textColor="@color/text_color"
                android:textSize="@dimen/color_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/chromaticity_hight"
                android:textColor="@color/text_color"
                android:textSize="@dimen/color_font_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/seekbar_self_blue"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:max="100"
            android:progress="80"
            android:progressDrawable="@drawable/self_define_blue"
            android:thumb="@drawable/thumb_bar_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/chromaticity_low"
                android:textColor="@color/text_color"
                android:textSize="@dimen/color_font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/chromaticity_hight"
                android:textColor="@color/text_color"
                android:textSize="@dimen/color_font_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nulls"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>