<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_actionbar_height"
        android:background="@drawable/theme_bg" >

        <ImageView
            android:id="@+id/actionbar_back"
            android:layout_width="@dimen/default_actionbar_height"
            android:layout_height="@dimen/default_actionbar_height"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/theme_back" />

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_actionbar_height"
            android:gravity="center"
            android:text="@string/device_name"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/light_set"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="场景灯光选择"
            android:textColor="@color/text_color"
            android:textSize="@dimen/settings_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="true"
            android:gravity="center"
            android:headerDividersEnabled="true"
            android:scrollingCache="false" >
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:text="彩灯光选择"
        android:textColor="@color/text_color"
        android:textSize="@dimen/settings_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:scrollingCache="false" >
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="top"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:gravity="left|top"
            android:text="昼夜光模式"
            android:textColor="@color/text_color"
            android:textSize="@dimen/settings_size" >
        </TextView>

        <com.action.bluetooth.view.SlipButton
            android:id="@+id/module_splitbutton"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginRight="20dp"
            android:layout_weight="0.20" />
    </LinearLayout>

</LinearLayout>